fixed text wrap issue and added refresh link

--- a/src/scss/03-layout/main.scss
+++ b/src/scss/03-layout/main.scss
@@ -9,6 +9,7 @@ main {
     font-family: 'Anonymous Pro', monospace;
     line-height: 175%;
     margin-bottom: 42px;
+    overflow-wrap: break-word;
     @media screen and (max-width: 768px) {
       margin-bottom: 16px;
     }
